@@ -1,6 +1,8 @@
 Revision history for MojoX::Log::Dispatch::Simple
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
 
 1.07      2019-11-04 14:14:57-08:00 America/Los_Angeles
         - Add context() so to support the expectation of Mojolicious 8.24 for
